InputProps={{ // <-- This is where the toggle button is added.

--- a/src/pages/guest/Login/index.scss
+++ b/src/pages/guest/Login/index.scss
@@ -1,5 +1,5 @@
 .loginBG {
-  background-image: url(../../../assets/images/LightBlueBG.jpg);
+  background-image: url(../../../assets/images/LoginBG.png);
   height: 100%;
   background-position: center;
   background-repeat: no-repeat;
