--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;500;600;700&display=swap');
 
 html,
 body,
 #root {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Public Sans', sans-serif;
 }
 html,
 body {
